roles/ocp4_workload_ocp_troubleshooting_workshop/files/workloads/01-configuration/1.2-missing-secret/broken/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-1-2-app
  labels:
    app: lab-1-2-app
    demo.redhat.com/name: ocp-troubleshooting-workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lab-1-2-app
  template:
    metadata:
      labels:
        app: lab-1-2-app
    spec:
      containers:
      - name: web
        image: registry.access.redhat.com/ubi9/nginx-124:latest
        ports:
        - containerPort: 8080
